# cs4398-stm32

./: .gitignoore  .gitignore  cs4398-cache.lib  cs4398.bak  cs4398.kicad_pcb  cs4398.kicad_pcb-bak  cs4398.net  cs4398.pro  cs4398.sch
ad8656/: ad8656-cache.lib  ad8656.bak  ad8656.kicad_pcb  ad8656.kicad_pcb-bak  ad8656.net  ad8656.pro  ad8656.sch
src/cs4398_test/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F437VGTx_FLASH.ld  cs4398_test.ioc  cs4398_test.xml  project.el
src/cs4398_test/Drivers/CMSIS/Include/: cmsis_gcc.h
src/cs4398_test/Inc/: i2s.h  main.h  stm32f4xx_it.h
src/cs4398_test/Inc/Backup/: stm32f4xx_hal_conf.h.bak
src/cs4398_test/Src/: i2c.c  i2s.c  main.c  main.c~
src/cs4398_test/Src/Backup/: gpio.c.bak  i2s.c.bak  stm32f4xx_it.c.bak
src/cs4398_test/vs1053/: vs1053.h
